# BigData

Individual_Assignment/DistributedMatrixMultiplication/java/: pom.xml
Individual_Assignment/DistributedMatrixMultiplication/java/results/: dmm_results_java.json
Individual_Assignment/DistributedMatrixMultiplication/python/: app.py  utils.py
Individual_Assignment/DistributedMatrixMultiplication/python/results/: dmm_results_py.json
Individual_Assignment/DistributedMatrixMultiplication/python/runners/: __init__.py  basic.py  parallel.py  spark_blocks.py  spark_rows.py
Individual_Assignment/MatrixMultiplication/code/c/: CMakeLists.txt  results_c.jsonl
Individual_Assignment/MatrixMultiplication/code/c/app/: bench.c
Individual_Assignment/MatrixMultiplication/code/c/include/: matrix.h
Individual_Assignment/MatrixMultiplication/code/c/src/: matrix.c
Individual_Assignment/MatrixMultiplication/code/c/tests/: test_matrix.c
Individual_Assignment/MatrixMultiplication/code/java/: dependency-reduced-pom.xml  pom.xml
Individual_Assignment/MatrixMultiplication/code/python/: bench.py  results_py.jsonl
Individual_Assignment/ParallelizationBenchmark/code/c/: CMakeLists.txt
Individual_Assignment/SparseMatrix/code/c/: CMakeLists.txt
Individual_Assignment/SparseMatrix/code/c/include/: benchmark.h  matrix_dense.h  matrix_sparse.h
Individual_Assignment/SparseMatrix/code/c/output/: results.csv
Individual_Assignment/SparseMatrix/code/c/src/: benchmark.c  main.c  matrix_dense.c  matrix_sparse.c
InvertedIndex/: pom.xml
InvertedIndex/src/main/resources/: hazelcast.xml
(+44 files in other folders)
